# WebMonDiag

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/cli/: commandlineview.cpp  commandlineview.h  commandreader.cpp  commandreader.h  main.cpp
src/cli/commands/: changeendpointpath.cpp  changeendpointpath.h  changehttpcode.cpp  changehttpcode.h  changeresptime.cpp  changeresptime.h  changewebpage.cpp  changewebpage.h  icommand.h
src/core/: ipresenter.h  iview.h  iwebserverdiag.h  logger.cpp  logger.h  serverpresenter.cpp  serverpresenter.h
src/core/web/: webpageloader.cpp  webpageloader.h  webserverdata.cpp  webserverdata.h  webserverdiag.cpp  webserverdiag.h
src/gui/: main.cpp  mainwindow.cpp  mainwindow.h
test/: CMakeLists.txt  presenter_test.cpp
test/integration/: webserverdiag_test.cpp
test/mock/: mockview.h
